--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@types/mocha": "^2.2.48",
     "@types/node": "^9.6.1",
     "chai": "^4.1.2",
+    "eslint-config-prettier": "^2.9.0",
     "mocha": "^5.0.5",
+    "prettier": "^1.11.1",
     "ts-node": "^5.0.1",
     "tslib": "^1.9.0",
     "tslint": "^5.9.1",
+    "tslint-plugin-prettier": "^1.3.0",
     "typescript": "^2.8.1"
   },
   "engines": {
